# vanity-address-generator

./: .gitignore  <execute_bash>  BUILD.md  Cargo.toml  GITHUB_ACTIONS.md  Makefile  README.md  RELEASE.md  build-all.sh
.github/workflows/: ci.yml  publish-checksums.yml  release.yml
src/: main.rs
